--- a/res/modpack/resources/matapack/texts/changelog.txt
+++ b/res/modpack/resources/matapack/texts/changelog.txt
@@ -1,5 +1,6 @@
-Version 0.0.0.3:
+Version 0.0.0.4:
  - First Public Release
  - Added BiblioWoods Natura
  - Added recipe for rotten flesh to leather
+ - Bug fixes
  - Removed Herobrine
